syntax = "proto3";
package kava.bep3.v1beta1;

import "kava/bep3/v1beta1/bep3.proto";
import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";

option go_package = "github.com/kava-labs/kava/x/bep3/types";

// Query defines the gRPC querier service for bep3 module
service Query {
  // Params queries module params
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/kava/bep3/v1beta1/params";
  }

  // AssetSupply queries info about an asset's supply
  rpc AssetSupply(QueryAssetSupplyRequest) returns (QueryAssetSupplyResponse) {
    option (google.api.http).get = "/kava/bep3/v1beta1/assetsupply/{denom}";
  }

  // AssetSupplies queries a list of asset supplies
  rpc AssetSupplies(QueryAssetSuppliesRequest) returns (QueryAssetSuppliesResponse) {
    option (google.api.http).get = "/kava/bep3/v1beta1/assetsupplies";
  }

  // AtomicSwap queries info about an atomic swap
  rpc AtomicSwap(QueryAtomicSwapRequest) returns (QueryAtomicSwapResponse) {
    option (google.api.http).get = "/kava/bep3/v1beta1/atomicswap/{swap_id}";
  }

  // AtomicSwaps queries a list of atomic swaps
  rpc AtomicSwaps(QueryAtomicSwapsRequest) returns (QueryAtomicSwapsResponse) {
    option (google.api.http).get = "/kava/bep3/v1beta1/atomicswaps";
  }
}

// QueryParamsRequest defines the request type for querying x/bep3 parameters.
message QueryParamsRequest {}

// QueryParamsResponse defines the response type for querying x/bep3 parameters.
message QueryParamsResponse {
  // params represents the parameters of the module
  Params params = 1 [(gogoproto.nullable) = false];
}

// QueryAssetSupplyRequest is the request type for the Query/AssetSupply RPC method.
message QueryAssetSupplyRequest {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  // denom filters the asset response for the specified denom
  string denom = 1;
}

// QueryAssetSupplyResponse is the response type for the Query/AssetSupply RPC method.
message QueryAssetSupplyResponse {
  // asset_supply represents the supply of the asset
  AssetSupply asset_supply = 1 [(gogoproto.nullable) = false];
}

// QueryAssetSuppliesRequest is the request type for the Query/AssetSupplies RPC method.
message QueryAssetSuppliesRequest {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryAssetSuppliesResponse is the response type for the Query/AssetSupplies RPC method.
message QueryAssetSuppliesResponse {
  // asset_supplies represents the supplies of returned assets
  repeated AssetSupply asset_supplies = 1 [(gogoproto.nullable) = false];

  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryAtomicSwapRequest is the request type for the Query/AtomicSwap RPC method.
message QueryAtomicSwapRequest {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  // swap_id represents the id of the swap to query
  string swap_id = 1;
}

// QueryAtomicSwapResponse is the response type for the Query/AtomicSwap RPC method.
message QueryAtomicSwapResponse {
  // id is the identifier of the swap
  string id = 1 [(gogoproto.customname) = "ID"];
  // atomic_swap represents the attributes of the swap
  AtomicSwap atomic_swap = 2 [(gogoproto.nullable) = false];
}

// QueryAtomicSwapsRequest is the request type for the Query/AtomicSwaps RPC method.
message QueryAtomicSwapsRequest {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  // involve filters by address
  string involve = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // expiration filters by expiration block height
  uint64 expiration = 2;
  // status filters by swap status
  SwapStatus status = 3;
  // direction fitlers by swap direction
  SwapDirection direction = 4;

  cosmos.base.query.v1beta1.PageRequest pagination = 5;
}

// QueryAtomicSwapsResponse is the response type for the Query/AtomicSwaps RPC method.
message QueryAtomicSwapsResponse {
  // atomic_swap represents the returned atomic swaps for the request
  repeated AugmentedAtomicSwap atomic_swaps = 1 [(gogoproto.nullable) = false];

  cosmos.base.query.v1beta1.PageResponse pagination = 3;
}
